--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,15 @@ jobs:
     - name: Install ffmpeg
       run: sudo apt-get install -y ffmpeg  # ffmpegのインストール
 
-    - name: Set up Google Cloud credentials
-      run: echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" > $HOME/gcloud-credentials.json  # Google Cloud認証情報をファイルに書き出す
+    # シークレットを使用してJSONファイルを作成
+    - name: create-json
+      id: create-json
+      uses: jsdaniell/create-json@v1.2.2
+      with:
+        name: "google_credentials.json"  # 作成するファイル名
+        json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}  # シークレットからJSONの内容を取得
 
+        
     - name: Install dependencies
       run: |
         pip install -r requirements.txt  # プロジェクトの依存パッケージをインストール
