--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         name: "google_credentials.json"  # 作成するファイル名
         json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}  # シークレットからJSONの内容を取得
-
+      GOOGLE_APPLICATION_CREDENTIALS: google_credentials.json
         
     - name: Install dependencies
       run: |
@@ -46,6 +46,7 @@ jobs:
     - name: Run Streamlit app
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}  # GitHub SecretsからAPIキーを取得して環境変数として設定
-        GOOGLE_APPLICATION_CREDENTIALS: $HOME/gcloud-credentials.json  # Google Cloud認証情報のファイルパスを環境変数として設定
+        GOOGLE_APPLICATION_CREDENTIALS: google_credentials.json  # 作成したGoogle Cloud認証情報ファイルのパスを設定
+
       run: |
         streamlit run main0904.py  # Streamlitアプリを起動
