--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Streamlit App CI/CD
+name: Deploy Streamlit App
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,13 +18,13 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Install ffmpeg
-      run: sudo apt-get update && sudo apt-get install -y ffmpeg
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install streamlit google-cloud-speech openai wave
+
+    - name: Create requirements.txt
+      run: pip freeze > requirements.txt
 
     - name: Set up Google Cloud credentials
       env:
@@ -38,14 +38,8 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> $GITHUB_ENV
 
-    - name: Run Streamlit app
-      run: streamlit run main0904.py &
-
-    - name: Wait for Streamlit to start
-      run: sleep 10
-
-    - name: Check if Streamlit is running
-      run: curl http://localhost:8501
-
-    - name: Stop Streamlit
-      run: pkill -f streamlit
+    - name: Deploy to Streamlit Cloud
+      uses: streamlit/streamlit-deploy-action@v1
+      with:
+        app-name: your-app-name-here
+        streamlit-api-key: ${{ secrets.STREAMLIT_API_KEY }}
